<?xml version="1.0" encoding="utf-8"?>
<!--笔记主页面布局-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <!--  This is our one standard application action (creating a new note). -->
    <item android:id="@+id/menu_add"
          android:icon="@drawable/ic_menu_fill_add"
          android:title="@string/menu_add"
          android:alphabeticShortcut='a'
          android:showAsAction="always" />

    <!--  If there is currently data in the clipboard, this adds a PASTE menu item to the menu
          so that the user can paste in the data.. -->
    <item android:id="@+id/menu_paste"
          android:icon="@drawable/ic_menu_compose"
          android:title="@string/menu_paste"
          android:alphabeticShortcut='p'/>

<!--    搜索按钮-->
    <item
          android:id="@+id/menu_search"
          android:icon="@drawable/ic_menu_blue_search"
          android:title="@string/menu_search"
          android:showAsAction="always"/>

<!--    设置-->
    <item android:id="@+id/menu_setting_in"
        android:title="@string/menu_setting"
        android:alphabeticShortcut="se"/>

<!--    更改主题-->
    <item android:id="@+id/menu_background"
          android:title="@string/menu_background"
          android:alphabeticShortcut="sbc"/>
</menu>